--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A2HS demo</title>
+    <title>Application MS-Shop</title>
+
     <link href="style.css" rel="stylesheet">
+
     <script src="index.js" defer></script>
+    <!-- gére l'apparence de l'application -->
     <link rel="manifest" href="manifest.webmanifest">
   </head>
+
   <body>
-    <img src="images/fox1.jpg" alt="a fox picture">
+    <img src="images/fox1.jpg">
     <button class="add-button">Add to home screen</button>
   </body>
 </html>
+<!--"start_url": "/pwa-examples/a2hs/index.html" -->
