--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
 
+
+
+
   <body>
+
+
+
+    
     <img src="images/fox1.jpg">
-    <button class="add-button">Add to home screen</button>
+
+
+
+
+
+    <button class="add-button">Ajouter a l'écran de acceuil</button>
   </body>
 </html>
 <!--"start_url": "/pwa-examples/a2hs/index.html" -->
