--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
 
   <body>
 
-
-
+    <div class="container box1 ">
+  
+      <img src="images/fox1.jpg">
     
-    <img src="images/fox1.jpg">
+    </div>
+ 
+    
+
+<div class="box2">
+
+  <button class="add-button">Ajouter a l'écran de acceuil</button>
+
+
+</div>
 
 
 
 
-
-    <button class="add-button">Ajouter a l'écran de acceuil</button>
   </body>
 </html>
 <!--"start_url": "/pwa-examples/a2hs/index.html" -->
