correcton du bug html-2 version0.61

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container box1 ">
   
-      <img src="images/fox1.jpg">
+      <img src="images/fox1.jpg" alt="logodefond">
     
     </div>
  
